tests/lsp/text_document/snapshots/lsp__text_document__completion__component_environment_class.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\documentclass{article}\n\\begin{thein}\n          |\n       ^^^^^\"#)"
---
[
  {
    "label": "theindex",
    "detail": "article.cls",
    "preselect": false
  }
]
