tests/lsp/text_document/snapshots/lsp__text_document__completion__component_environment_simple.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\begin{doc\n          |\n       ^^^\"#)"
---
[
  {
    "label": "document",
    "detail": "built-in",
    "preselect": false
  }
]
