tests/lsp/text_document/snapshots/lsp__text_document__completion__entry_type_before_article.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@article\n |\n ^^^^^^^\"#)"
---
[
  {
    "label": "article",
    "preselect": false
  }
]
