tests/lsp/text_document/snapshots/lsp__text_document__completion__entry_type_complete_entry.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@article{foo, author = {foo}}\n   |\n ^^^^^^^\"#)"
---
[
  {
    "label": "article",
    "preselect": false
  }
]
