tests/lsp/text_document/snapshots/lsp__text_document__completion__field_entry_two_fields_name_closed.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@article{foo, author = bar, edit}\n                             |\n                            ^^^^\"#)"
---
[
  {
    "label": "edition",
    "preselect": false
  },
  {
    "label": "editor",
    "preselect": false
  },
  {
    "label": "editora",
    "preselect": false
  },
  {
    "label": "editoratype",
    "preselect": false
  },
  {
    "label": "editorb",
    "preselect": false
  }
]
