tests/lsp/text_document/snapshots/lsp__text_document__completion__glossary_ref_simple.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}\n\\gls{f}\n     |\n     ^\"#)"
---
[
  {
    "label": "fpsLabel",
    "preselect": false
  }
]
