tests/lsp/text_document/snapshots/lsp__text_document__completion__import_package_closed_brace.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\usepackage{lips}\n             |\n            ^^^^\"#)"
---
[
  {
    "label": "lips",
    "preselect": false
  },
  {
    "label": "lipsum",
    "preselect": false
  },
  {
    "label": "lisp-simple-alloc",
    "preselect": false
  },
  {
    "label": "lisp-string",
    "preselect": false
  },
  {
    "label": "lwarp-lips",
    "preselect": false
  }
]
